tests/profile/error/module/wrongtype_name.profile
{
  "version": { "major": 1, "minor": 0 },
  "modules": [
    {
      "name": 1.0,
      "loadedInstruction": "instr",
      "notLoadedInstruction": "not_instr"
    }
  ]
}
